# crypt-currrency-price-predictor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  READM.md  README.md  app.py  project.ipynb  pyproject.toml  requirements.txt
.gitlab/issue_templates/: Bug.md
models/: model1.h5  model2.h5  model3.h5  model4.h5  model5.h5
pages/: 1_Model_Evaluation_Results.py  2_About.py
plots/: Binance_Coin.json  Bitcoin.json  Bitcoin_Cash.json  Bitcoin_Gold.json  Bitcoin_SV.json  Cardano.json  Dogecoin.json  EOS.json  Ethereum.json  Ethereum_Classic.json  Huobi_Token.json  Litecoin.json  OKB.json  Ripple.json  Stellar.json
